--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -14,11 +14,7 @@ const tabs = [
 const activeTabKey = 'skills';
 ---
 
-<section
-  id="about"
-  aria-labelledby="about-title"
-  class="fade-section bg-black pt-20 text-white md:pt-24"
->
+<section id="about" aria-labelledby="about-title" class="fade-section bg-black pt-20 text-white">
   <div class="container mx-auto px-6">
     <div class="mb-8 mt-4 flex flex-col gap-3">
       <h2
