--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -4,7 +4,7 @@ const t = useTranslations(Astro);
 ---
 
 <section id="contact" class="fade-section bg-black text-white">
-  <div class="container mx-auto max-w-3xl px-6 text-center">
+  <div class="container mx-auto my-16 max-w-3xl px-6 text-center md:my-0">
     <!-- Title -->
     <h2
       class="mb-4 text-4xl font-extrabold text-green-400 drop-shadow-[0_0_25px_#00FF80] sm:text-5xl"
