--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import { ViewTransitions } from 'astro:transitions';
 import Navbar from '../components/Navbar.astro';
 import Footer from '../components/Footer.astro';
+import GoogleAnalytics from '../components/GoogleAnalytics.astro';
 import { useTranslations } from '../utils/translate';
 import '../css/global.css';
 const t = useTranslations(Astro);
@@ -25,6 +26,7 @@ const personSchema = {
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <GoogleAnalytics />
     <meta name="description" content={t('seo.description')} />
     <meta property="og:title" content={t('seo.title')} />
     <meta property="og:description" content={t('seo.description')} />
